feat: рефакторинг + доработка авторизации

--- a/front-ui/src/main/resources/templates/main.html
+++ b/front-ui/src/main/resources/templates/main.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 
 <head>
-    <title>Банковское приложение></title>
+    <title>Банковское приложение</title>
     <script language="JavaScript">
         setInterval(() => {
             var td = document.getElementById('exchange_rates');
